# RobotEditMCP

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  ROBOT_CONFIG_API.md  pyproject.toml  机器人配置json.txt
.claude/skills/create-skill/: SKILL.md
.claude/skills/k8s-logs-query/: SKILL.md
.claude/skills/pypi-publish-guide/: SKILL.md
.github/workflows/: publish.yml
plans/: edit_robot_config.md  modify_testcase_setup_cleanup.md
src/roboteditmcp/: __init__.py  client.py  config.py  logging_config.py  main.py  server.py
src/roboteditmcp/api/: __init__.py  base.py  draft.py  metadata.py  online.py  template.py
src/roboteditmcp/models/: __init__.py
src/roboteditmcp/tools/: __init__.py  draft.py  metadata.py  online.py  template.py
tests/: __init__.py  conftest.py  test_client.py  test_mcp_protocol.py  test_mcp_tools.py
tests/api/: __init__.py  base_test.py  prepare_online_config.py  test_draft.py  test_helpers.py  test_online.py  test_template.py
tests/api/templates/: __init__.py  action_test_set.json  batch_ref_chain.json  minimal_robot.json  robot_with_memory.json
tests/tools/: __init__.py  test_draft_tools.py  test_online_tools.py  test_template_tools.py
