[project]
name = "roboteditmcp"
version = "0.1.0"
description = "MCP server for Robot configuration management - AI Agent tools for Robot draft/online/template configs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
roboteditmcp = "roboteditmcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roboteditmcp"]
